--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
-    "vite-plugin-pwa": "^0.20.5",
+    "vite-plugin-pwa": "1.0.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
